--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     #splashCover {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-      background-color: #e8edff;
+      background-color: #1076ca;
       position: fixed;
       left: 0;
       right: 0;
@@ -29,7 +29,7 @@
     }
 
     #splashCover h1 {
-      color: #333;
+      color: #fff;
       margin: 0!important;
       font-size: 30px!important;
       font-weight: 100;
@@ -37,7 +37,7 @@
     }
 
     #splashCover h3 {
-      color: #333;
+      color: #fff;
       margin: 0!important;
       font-size: 20px!important;
       font-weight: 100;
